# walkaroundmp

./: CMakeLists.txt  Game.cpp  Game.h  NetStuff.cpp  NetStuff.h  World.h  dummyclient.cpp  server.cpp
client/: CMakeLists.txt  Game.cpp  Game.h  MPSession.cpp  MPSession.h  main.cpp
dummy/: CMakeLists.txt  dummyclient.cpp
server/: CMakeLists.txt  NetStuff.cpp  NetStuff.h  server.cpp
shared/: CMakeLists.txt  World.cpp  World.h  constants.h
