cmake_minimum_required(VERSION 3.23)
project(walkaroundmp)

set(CMAKE_CXX_STANDARD 17)
find_package(SDL2 REQUIRED)
find_package(SDL2_Image REQUIRED)
find_package(GameNetworkingSockets REQUIRED)
find_package(Protobuf REQUIRED)
add_subdirectory(shared)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(dummy)
